--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cody's About Me</title>
-  <link name="reset" src="css/reset.css">
-  <link name="stylesheet" src="css/styles.css">
-  <link name="scripts" src="js/script.js">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h1>About Me</h1>
+  <h1>About Cody</h1>
+  
+
+  <script src="js/app.js"></script>
 </body>
 </html>
