--- a/index.html
+++ b/index.html
@@ -9,9 +9,42 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h1>About Cody</h1>
-  
+  <main>
+    <header>
+      About Cody
+    </header>
+    <div id="content">
+      <section class="about">
+        <h1>Biography</h1>
+        <p class="info">
+          My name is Cody De La torre, I am 23 and I was born and raised in sunny southern California. I was a menace as a child but when I graduated high school I joined the US Army as an Intelligence Analyst which got me on the right track. I've served my time in the Army and now I am ready to move on to new challenges and that's why I'm here with y'all at Code Fellows! 
+        </p>
+      </section>
+      <section class="about">
+        <h1>Job Experience</h1>
+        <ul class="info">
+          <li>Security Manager - US Army - 2018 to Present</li>
+          <li>Intelligence Analyst - US Army - 2018 to Present</li>
+          <li>Lifegaurd - Dropzone Waterpark - 2016 to 2017</li>
 
+        </ul>
+      </section>
+      <section class="about">
+        <h1>Education History</h1>
+        <ul class="info">
+          <li>BS - Graphic Information Technology - Arizona State University - Expected 2024</li>
+          <li>Certificate - Advanced Software Development in Javascript - Code Fellows - Expected 2023</li>
+          <li>Certificate - Basic Leadership Course - Ft. Lewis NCO Academy - 2021</li>
+          <li>Certificate - Intelligence Analyst - US Army Intelligence School - 2018</li>
+          <li>Diploma - Heritage High School - 2017</li>
+        </ul>
+      </section>
+    </div>
+  </main>
+  <footer style="text-align: center">
+    <p>footers are for nerds</p>
+  </footer>
+  
   <script src="js/app.js"></script>
 </body>
 </html>
