--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     </header>
     <div id="content">
       <section class="about">
-        <h1>Biography</h1>
+        <h2>Biography</h2>
         <p class="info">
           My name is Cody De La torre, I am 23 and I was born and raised in sunny southern California. I was a menace as a child but when I graduated high school I joined the US Army as an Intelligence Analyst which got me on the right track. I've served my time in the Army and now I am ready to move on to new challenges and that's why I'm here with y'all at Code Fellows! 
         </p>
       </section>
       <section class="about">
-        <h1>Job Experience</h1>
+        <h2>Job Experience</h2>
         <ul class="info">
           <li>Security Manager - US Army - 2018 to Present</li>
           <li>Intelligence Analyst - US Army - 2018 to Present</li>
@@ -30,7 +30,7 @@
         </ul>
       </section>
       <section class="about">
-        <h1>Education History</h1>
+        <h2>Education History</h2>
         <ul class="info">
           <li>BS - Graphic Information Technology - Arizona State University - Expected 2024</li>
           <li>Certificate - Advanced Software Development in Javascript - Code Fellows - Expected 2023</li>
@@ -38,6 +38,21 @@
           <li>Certificate - Intelligence Analyst - US Army Intelligence School - 2018</li>
           <li>Diploma - Heritage High School - 2017</li>
         </ul>
+      </section>
+      <section class="about">
+        <ol>
+          <h2>Top Ten Books/Comics/Mangas</h2>
+          <li>Berserk</li>
+          <li >Solo Leveling</li>
+          <li >World War Hulk</li>
+          <li >Harry Potter</li>
+          <li >The Witcher</li>
+          <li >The Hobbit</li>
+          <li >Marvel: Civil War</li>
+          <li >Batman: Death of the Family</li>
+          <li >Percy Jackson</li>
+          <li > Thor: Godbomb</li>
+        </ol>
       </section>
     </div>
   </main>
