--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
           <li >The Witcher</li>
           <li >The Hobbit</li>
           <li >Marvel: Civil War</li>
-          <li >Batman: Death of the Family</li>
-          <li >Percy Jackson</li>
-          <li > Thor: Godbomb</li>
+          <li >Batman: Death in the Family</li>
+          <li >Percy Jackson Series</li>
+          <li >Thor: Godbomb</li>
         </ol>
       </section>
     </div>
