added a button for the quiz

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
           <li >Thor: Godbomb</li>
         </ol>
       </section>
+      <button onclick="quiz()">Learn about me!</button>
     </div>
   </main>
   <footer style="text-align: center">
     <p>footers are for nerds</p>
   </footer>
-  
   <script src="js/app.js"></script>
 </body>
 </html>
